# gerencialab

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  GerenciaLab  GerenciaLab.pro  Makefile  README.md  cmake_install.cmake
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
GerenciaLab_autogen/: deps  moc_predefs.h
docs/development/: sprint-backlog-organization.md
docs/html/: annotated.html  annotated_dup.js  class_queue_manager-members.html  class_queue_manager.html  class_queue_manager.js  class_queue_manager__coll__graph.map  class_queue_manager__inherit__graph.md5  class_queue_model-members.html  class_queue_model.html  class_queue_model.js  class_receptionist_window-members.html  class_receptionist_window.html  class_receptionist_window.js  class_receptionist_window__coll__graph.map  class_receptionist_window__coll__graph.md5  class_ticket_factory-members.html  class_ticket_factory.html  class_totem_window-members.html  class_totem_window.html  class_totem_window.js  class_totem_window__coll__graph.md5  class_totem_window__inherit__graph.map  classes.html  common_2_c_make_files_2common_8dir_2common__autogen_2mocs__compilation_8cpp_8o_8d.html  common_2_c_make_files_2common_8dir_2queue__manager_8cpp_8o_8d.html  common_2_c_make_files_2common_8dir_2queue__model_8cpp_8o_8d.html  common_2_c_make_files_2common_8dir_2ticket__factory_8cpp_8o_8d.html  common_2common__autogen_2_e_w_i_e_g_a46_w_w_2moc__queue__manager_8cpp.html  common_2common__autogen_2_e_w_i_e_g_a46_w_w_2moc__queue__manager_8cpp.js  common_2common__autogen_2_e_w_i_e_g_a46_w_w_2moc__queue__manager_8cpp_8d.html  common_2common__autogen_2_e_w_i_e_g_a46_w_w_2moc__queue__manager_8cpp__dep__incl.map  common_2common__autogen_2_e_w_i_e_g_a46_w_w_2moc__queue__manager_8cpp__dep__incl.md5  (+234 more)
html/: doxygen_crawl.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
latex/: md__r_e_a_d_m_e.tex
src/common/: CMakeLists.txt  Makefile  cmake_install.cmake  queue_manager.cpp  queue_manager.h  queue_model.cpp  queue_model.h  ticket.h  ticket_factory.cpp  ticket_factory.h
src/common/common_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
src/common/common_autogen/EWIEGA46WW/: moc_queue_manager.cpp  moc_queue_manager.cpp.d
src/lab-fila/: CMakeLists.txt  Makefile  cmake_install.cmake  liblab-fila.dylib  receptionist_window.cpp  receptionist_window.h  totem_window.cpp  totem_window.h
src/lab-fila/lab-fila_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
src/lab-fila/lab-fila_autogen/AAGGKE4ILT/: moc_queue_manager.cpp  moc_queue_manager.cpp.d
src/lab-fila/lab-fila_autogen/EWIEGA46WW/: moc_receptionist_window.cpp  moc_receptionist_window.cpp.d  moc_totem_window.cpp  moc_totem_window.cpp.d
src/lab-fila/lab-fila_autogen/include/: queue_manager.moc  queue_manager.moc.d
src/lab-painel/: CMakeLists.txt  Makefile  cmake_install.cmake
(+165 files in other folders)
